formio/formio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: formio-http
  namespace: formio
  labels:
    app: formio-http
spec:
  replicas: 1
  selector:
    matchLabels:
      app: formio-http
  template:
    metadata:
      labels:
        app: formio-http
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: formio
        image: registry.gitlab.com/goatlab/corporate/moutain/mountain/formio:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: formio-http
  namespace: formio
  labels:
    app: formio-http
  annotations:
    plugins.konghq.com: add-ratelimiting-to-route, oidc-keycloak
spec:
  ports:
  - name: formio-port
    port: 3001
    targetPort: http
    protocol: TCP
  selector:
    app: formio-http
  type: NodePort
