formio/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: formio
  namespace: formio
  annotations:
    kubernetes.io/ingress.class: kong
    configuration.konghq.com: formio-configuration
    plugins.konghq.com: add-request-transformer, oidc-keycloak
spec:
  tls:
    - hosts:
        - gateway.oneclinick.com
      secretName: letsencrypt-clouddns
  rules:
    - host: gateway.oneclinick.com
      http:
        paths:
          - path: /api/formio
            backend:
              serviceName: formio-http
              servicePort: 3001
